--- a/Commitee.html
+++ b/Commitee.html
@@ -20,12 +20,16 @@
             <div class="head-box">
                 <h1>COMMITTEES 2023</h1>
             </div>
-            <div class="qoute">
-                <p>The whole basis of the United Nations is the right of all nations—great or small—to have weight, to have a vote,
-                    to be
-                    attended to, to be a part of the twentieth century.
-            
-                    – Adlai Stevenson</p>
+            <div class="comm-detail">
+                <p>The Committees and Topics – While many other conferences are becoming almost entirely crisis-focused and adding a
+                plethora of non-traditional UN committees, DYPIMUN commits to traditional United Nations bodies and committees which
+                stress substantive debate of the most pressing issues in the world today. We believe that students benefit most from
+                such debate and real-world topics, and that DYPIMUN provides the perfect environment for serious and informative
+                discussion on a global scale. We further believe that MUN should be about diplomacy and cooperation rather than
+                competition. As such, we prioritize the educational aspects of the MUN experience, not an environment where students are
+                only focused on “winning” the competition. Our students, often years or even decades later, tell us that the learning
+                experience they had at DYPIMUN was transformative in their lives and helped them develop the skills they needed to
+                identify their areas of passion and pursue their future careers.</p>
             </div>
         </div>
         
@@ -37,8 +41,8 @@
 
         <!-- First Committee DISEC-->
         <!-- For left fade -->
-        <section id="disec">
-            <div class="committees left-comm">
+        <section id="disec" class=" left-comm">
+            <div class="committees">
                 <div class="container reveal  fade-left active" id="disec-bg">
                     <div class="logo-box left-logo">
                         <img src="./logo/disec.png" alt="Earth News" class="UNlogo">
@@ -63,7 +67,7 @@
         <!-- Second Committee ECOFIN-->
         <!-- For right fade -->
 
-        <section id="ecofin">
+        <section id="ecofin" class="right-comm">
             <div class="committees right-comm">
                 <div class="container reveal fade-right" id="ecofin-bg">
                     <div class="logo-box right-logo">
@@ -91,7 +95,7 @@
         <!-- Third Committee SOCHUM-->
         <!-- For left fade -->
 
-        <section id="sochum">
+        <section id="sochum"  class=" left-comm">
             <div class="committees left-comm">
                 <div class="container reveal  fade-left active" id="sochum-bg">
                     <div class="logo-box left-logo">
@@ -120,7 +124,7 @@
         <!-- Fourth Committee SPECPOL-->
         <!-- For right fade -->
 
-        <section id="specpol">
+        <section id="specpol" class="right-comm">
             <div class="committees right-comm">
                 <div class="container reveal fade-right" id="specpol-bg">
                     <div class="logo-box right-logo">
@@ -158,7 +162,7 @@
         <!-- Fifth Committee ECOSOC-->
         <!-- For left fade -->
 
-        <section id="ecosoc">
+        <section id="ecosoc"  class=" left-comm">
             <div class="committees left-comm">
                 <div class="container reveal  fade-left active" id="ecosoc-bg">
                     <div class="logo-box left-logo">
@@ -185,7 +189,7 @@
         <!-- Sixth Committee UNGA-->
         <!-- For right fade -->
 
-        <section id="unga">
+        <section id="unga" class="right-comm">
             <div class="committees right-comm">
                 <div class="container reveal fade-right" id="unga-bg">
                     <div class="logo-box right-logo">
@@ -211,7 +215,7 @@
         <!-- Seventh Committee UNSC-->
         <!-- For left fade -->
 
-        <section id="unsc">
+        <section id="unsc" class=" left-comm">
             <div class="committees left-comm">
                 <div class="container reveal  fade-left active" id="unsc-bg">
                     <div class="logo-box left-logo">
@@ -237,7 +241,7 @@
         <!-- Eighth Committee UNESCO-->
         <!-- For right fade -->
 
-        <section id="unesco">
+        <section id="unesco" class="right-comm">
             <div class="committees right-comm">
                 <div class="container reveal fade-right" id="unesco-bg">
                     <div class="logo-box right-logo">
@@ -260,7 +264,7 @@
         <!-- Ninth Committee UNCTAD-->
         <!-- For left fade -->
 
-        <section id="unctad">
+        <section id="unctad" class=" left-comm">
             <div class="committees left-comm">
                 <div class="container reveal  fade-left active" id="unctad-bg">
                     <div class="logo-box left-logo">
@@ -287,7 +291,7 @@
         <!-- Tenth Committee G20-->
         <!-- For right fade -->
 
-        <section id="g20">
+        <section id="g20" class="right-comm">
             <div class="committees right-comm">
                 <div class="container reveal fade-right" id="g20-bg">
                     <div class="logo-box right-logo">
