--- a/header.html
+++ b/header.html
@@ -64,7 +64,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+                            <a class="nav-link active" aria-current="page" href="preparation.html">Preparation</a>
                         </li>
 
                         <li class="nav-item">
