--- a/preparation.html
+++ b/preparation.html
@@ -22,7 +22,7 @@
 
     <section class="second-page preparation-sec">
         <div class="expanded-bg"></div>
-        <img src="images/fgfgfg.jpg" alt="" class="prep-img">
+        <img src="logo/prepare.jpg" alt="" class="prep-img">
         <div class="prep-container">
             <div class="prep-container-layout">
                 <h3 class="prep-heading"><b>How do I prepare for my first conference?</b>
@@ -42,7 +42,7 @@
                     <div class="position-flex">
                         <div class="pos-con">
                             <div class="pos-img-container">
-                                <img src="images/cvccv.jpg" alt=""
+                                <img src="logo/position.jpg" alt=""
                                     class="position-image">
                             </div>
                         </div>
@@ -173,7 +173,9 @@
         <div class="research-page">
                 <div class="research-layout">
                     <div class="research-img">
-                        <div class="res-image"></div>
+                        <div class="res-image">
+                            <img src="./logo/sixth-prepare.webp" alt="" style="width: 100%;">
+                        </div>
                     </div>
                     <div class="research-text-layout">
                         <div class="research-text">
