--- a/header.html
+++ b/header.html
@@ -44,31 +44,35 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="Commitee.html">Committees</a>
+                        </li>
+
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 About Us
                             </a>
                             <ul class="dropdown-menu" style="width: 200px;">
-                                <li style="margin-left: 10px;"><a class="dropdown-item"
-                                        href="Exordium.html">Exordium</a></li>
-                                <li style="margin-left: 10px;"><a class="dropdown-item"
-                                        href="founders.html">Founders</a></li>
+                                <li style="margin-left: 10px;"><a class="dropdown-item" href="Exordium.html">Exordium</a></li>
+                                <!-- <li style="margin-left: 10px;"><a class="dropdown-item" href="founders.html">Founders</a></li> -->
                                 <li style="margin-left: 10px;"><a class="dropdown-item" href="team.html">Our Team</a>
                                 </li>
                             </ul>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="Commitee.html">Committees</a>
-                        </li>
-
-                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="preparation.html">Preparation</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="registration.html">Register</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Register
+                            </a>
+                            <ul class="dropdown-menu" style="width: 200px;">
+                                <li style="margin-left: 10px;"><a class="dropdown-item" href="registration_for_EB.html">Executive Board</a></li>
+                                <li style="margin-left: 10px;"><a class="dropdown-item" href="registration.html">Delegates</a></li>
+                                </li>
+                            </ul>
                         </li>
 
                     </ul>
