--- a/header.html
+++ b/header.html
@@ -41,11 +41,11 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0 justify-content-ends">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="Commitee.html">Committees</a>
+                            <a class="nav-link" aria-current="page" href="Commitee.html">Committees</a>
                         </li>
 
                         <li class="nav-item dropdown">
@@ -53,15 +53,15 @@
                                 About Us
                             </a>
                             <ul class="dropdown-menu" style="width: 200px;">
-                                <li style="margin-left: 10px;"><a class="dropdown-item" href="Exordium.html">Exordium</a></li>
+                                <li style="margin-left: 10px;"><a class="nav-link dropdown-item" href="Exordium.html">Exordium</a></li>
                                 <!-- <li style="margin-left: 10px;"><a class="dropdown-item" href="founders.html">Founders</a></li> -->
-                                <li style="margin-left: 10px;"><a class="dropdown-item" href="team.html">Our Team</a>
+                                <li style="margin-left: 10px;"><a class="nav-link dropdown-item" href="team.html">Our Team</a>
                                 </li>
                             </ul>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="preparation.html">Preparation</a>
+                            <a class="nav-link" aria-current="page" href="preparation.html">Preparation</a>
                         </li>
 
                         <li class="nav-item dropdown">
@@ -69,8 +69,8 @@
                                 Register
                             </a>
                             <ul class="dropdown-menu" style="width: 200px;">
-                                <li style="margin-left: 10px;"><a class="dropdown-item" href="registration_for_EB.html">Executive Board</a></li>
-                                <li style="margin-left: 10px;"><a class="dropdown-item" href="registration.html">Delegates</a></li>
+                                <li style="margin-left: 10px;"><a class="nav-link dropdown-item" href="registration_for_EB.html">Executive Board</a></li>
+                                <li style="margin-left: 10px;"><a class="nav-link dropdown-item" href="registration.html">Delegates</a></li>
                                 </li>
                             </ul>
                         </li>
