--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- front page bg -->
 
-    <section class="front-page">
+    <section class="front-page" style="margin: 0;">
         <div class="container-fluid bg-overlay">
             <div class="text-box">
                 <h1>D. Y. Patil University<br>International Model United Nations</h1>
