--- a/index.html
+++ b/index.html
@@ -378,6 +378,11 @@
                         <br><a href="mailto:dypmun2k23@gmail.com">dypmun2k23@gmail.com</a>
                     </p>
 
+                    <p class="address-para"><b>Contact: </b>
+                        <br><a href="tel:+917385083351">Meghna desai: +91 738 508 3351</a>
+                        <br><a href="tel:+919423338493">Areeb Ansari: +91 94233 38493</a>
+                    </p>
+
                     <p class="address-para"><b>Addres: </b>
                         <br>Sr. No. 124 & 126, A/p Ambi MIDC Road, <br>Tal Maval, Talegaon Dabhade, Maharashtra 410506
                     </p>
