--- a/Commitee.html
+++ b/Commitee.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Committee</title>
     <link rel="stylesheet" href="css/committees.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -57,7 +57,11 @@
                                 international
                                 community and seeks out solutions to the challenges in the international security regime.
                                 Agenda -</p>
-                        </div>
+                        <!-- button link</div> -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -85,7 +89,11 @@
                                 nutrition; information
                                 and
                                 communications technologies for development; and implementation of the New Urban Agenda.</p>
-                        </div>
+                        <!-- button link</div> -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -115,6 +123,12 @@
                                 working
                                 groups as mandated by the Human Rights Council.</p>
                         </div>
+
+                        <!-- button link -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -152,7 +166,11 @@
                                 territories,
                                 and
                                 International cooperation in the peaceful uses of outer space.</p>
-                        </div>
+                        <!-- button link</div> -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -179,7 +197,12 @@
                                 all
                                 three pillars of
                                 sustainable development-economic, social and environmental.</p>
-                        </div>
+
+                        <!-- button link</div> -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -205,7 +228,11 @@
                                 issues
                                 covered by the
                                 Charter of the United Nations.</p>
-                        </div>
+                        <!-- button link</div> -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -231,7 +258,11 @@
                                 States
                                 are obligated to
                                 comply with Council decisions.</p>
-                        </div>
+                        <!-- button link</div> -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -254,7 +285,11 @@
                                 understanding
                                 and respect for
                                 our planet. We work to strengthen the intellectual and moral solidarity of humankind.</p>
-                        </div>
+                        <!-- button link</div> -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -281,7 +316,11 @@
                                 we provide
                                 analysis,
                                 facilitate consensus-building, and offer technical assistance.</p>
-                        </div>
+                        <!-- button link</div> -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -309,7 +348,11 @@
                                 more than 80 percent of world GDP, 75 percent of international trade and 60 percent of the
                                 world
                                 population.</p>
-                        </div>
+                        <!-- button link</div> -->
+                        <!-- <div class="button-class">
+                            <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                            <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
