--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                         <div class="content d-flex flex-column align-items-center justify-content-center mid-right">
                             <div>
                                 <h3 class="text-white fs-5">UNGA</h3>
-                                <p class="card-para text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-                                    sed
-                                    cum neque, rem provident ex. Laboriosam perspiciatis modi eveniet in?</p>
+                                <p class="card-para text-white">The UN General Assembly (UNGA) is the main policy-making organ of the Organization. Comprising all Member States, it
+                                provides a unique forum for multilateral discussion of the full spectrum of international issues covered by the Charter
+                                of the United Nations.</p>
                                 <a href="./commitee.html#unga" class="btn btn-outline-dark">Know More</a>
                             </div>
                         </div>
